--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -13,15 +13,22 @@
 .btn--primary {
     background-color: var(--primary);
     color: #242424;
+    cursor: pointer;
     border:1px solid var(--primary);
 }
 
 .btn--outline {
     background-color: transparent;
     color: #fff;
+    cursor: pointer;
     padding: 8px 20px;
     border:1px solid var(--primary);
     transition: all 0.3s ease-out;
+}
+
+.btn--outline:hover {
+    background-color: #fff;
+    color: #000;
 }
 
 .btn-medium {
