--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -24,6 +24,17 @@ video {
     margin-top: -110px;
 }
 
+/* .hero__title {
+    transform: translate(0px, 120%);
+    opacity: 0;
+    transition: all 0.8s ease 0s ;
+} */
+
+.hero__title._active {
+    transform: translate(0px, 0px);
+    opacity: 1;
+}
+
 .hero-container> p {
     margin-top: 8px;
     color:#fff;
@@ -38,6 +49,25 @@ video {
 .hero-btns .btn {
     margin: 6px;
 }
+
+.alert-enter {
+    opacity: 0;
+    transform: translate(0, -120%);
+  }
+  .alert-enter-active {
+    opacity: 1;
+    transform: translate(0, 0);
+    transition: opacity 2000ms, transform 2000ms;
+  }
+  .alert-exit {
+    opacity: 1;
+  }
+  .alert-exit-active {
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity 800ms, transform 800ms;
+  }
+  
 
 @media(max-width: 960px) {
     .hero-container > h1 {
@@ -66,3 +96,4 @@ video {
         width: 100%;
     }
 }
+
